UI fix v0.4
Fixing the "Add new post" button used everywhere. The link on the button was not working in Firefox. The issue being the bad coding style. You should always wrap button element inside an anchor tag, not anchor inside button. Using button class in anchor tag was making the button to swell too much in navbar. Well this is the only way it's working for everything now :).

Also updated style.css to replaced #button-nav with child class .btn.button-nav. The class does not gives left margin now, but gives negative margin to top and bottom to align the "Align new post" properly.

--- a/template/style.css
+++ b/template/style.css
@@ -14,8 +14,9 @@
 	text-decoration: none;
 }
 
-#button-nav {
-	margin-left: 10px;
+.btn.button-nav {
+	margin-top: -10px;
+	margin-bottom: -10px;
 }
 
 #button-nav a {
